--- a/tutorial/visdom/4.videos.md
+++ b/tutorial/visdom/4.videos.md
@@ -2,7 +2,7 @@
 
 The [`video`](https://github.com/facebookresearch/visdom/blob/master/py/__init__.py#L459-L514) method that we are using here takes the following arguments:
 
-```
+```python
 def video(self, tensor=None, videofile=None, win=None, env=None, opts=None):
     """
     This function plays a video. It takes as input the filename of the video
@@ -15,7 +15,7 @@ def video(self, tensor=None, videofile=None, win=None, env=None, opts=None):
 
 If we want to render a 4D tensor, we can pass a 4D numpy matrix to ‘tensor’ argument of viz.video() (viz is our instance) to create a temporary .ogv file in a THEO codec compression. In this case, for simplicity, we are just presenting a simple video that depicts a series of images that change color from black to white. The following code can be used to construct an empty structure for a sequence of frames that is filled at each timestamp of video array with numbers ranging from 0 to 255:
 
-```
+```python
 video = np.empty([FRAMES, WIDTH, LENGTH, 3], dtype=np.uint8)
 for n in range(FRAMES):
     video[n, :, :, :].fill(n)
@@ -28,13 +28,13 @@ Note that the file extension .ogv, although supported in HTML5, is not always su
 
 In order to stream a local file we can use the following line:
 
-```
+```python
 viz.video(videofile=address_string_to_your_file)
 ```
 ## Combining altogether
 After initializing the visdom instance and checking that our connection to visdom server is being made, by providing the url address of a sample video and a sample GIF file, we make sure that the video file and the GIF file we want to play are downloaded and stored locally. Next, the video becomes available through the visdom server by calling the video method of our visdom instance taking the downloaded file address as input. As for our GIF file, in order to prepare the GIF tensor, while creating a video array from the stored GIF file, we also calculate the average frames per second (fps) of our GIF animation. Finally, by passing the resulting video array and average fps to `tensor` and `opts['fps']` arguments, respectively, a temporary .ogv file will be made and posted on the visdom server.
 
-```
+```python
 from visdom import Visdom
 import numpy as np
 import os.path
