--- a/tutorial/visdom/4.videos.md
+++ b/tutorial/visdom/4.videos.md
@@ -6,7 +6,7 @@ The [`video`](https://github.com/facebookresearch/visdom/blob/master/py/__init__
 def video(self, tensor=None, videofile=None, win=None, env=None, opts=None):
     """
     This function plays a video. It takes as input the filename of the video
-    or a `LxCxHxW` tensor containing all the frames of the video. The function
+    or a `LxHxWxC` tensor containing all the frames of the video. The function
     does not support any plot-specific `options`.
     """
 ```
