--- a/tutorial/visdom/4.videos.md
+++ b/tutorial/visdom/4.videos.md
@@ -31,6 +31,8 @@ In order to stream a local file we can use the following line:
 ```python
 viz.video(videofile=address_string_to_your_file)
 ```
+`videofile` could be of formats _mp4_, _ogg_, _avi_, or _webm_.
+
 ## Combining altogether
 After initializing the visdom instance and checking that our connection to visdom server is being made, by providing the url address of a sample video and a sample GIF file, we make sure that the video file and the GIF file we want to play are downloaded and stored locally. Next, the video becomes available through the visdom server by calling the video method of our visdom instance taking the downloaded file address as input. As for our GIF file, in order to prepare the GIF tensor, while creating a video array from the stored GIF file, we also calculate the average frames per second (fps) of our GIF animation. Finally, by passing the resulting video array and average fps to `tensor` and `opts['fps']` arguments, respectively, a temporary .ogv file will be made and posted on the visdom server.
 
@@ -52,16 +54,16 @@ assert (viz.check_connection())
 try:
     
     # GIF & video demo: download files from sources
-    video_url = 'http://media.w3.org/2010/05/sintel/trailer.ogv'
-    gif_url = 'https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif?download'
+    video_url = 'https://github.com/madarez/ccw1_trainstats/blob/master/tutorial/Curiosity%20Replicated%20Videos/openaigym.video.0.20392.video000001.mp4?raw=true'
+    gif_url = 'http://cs.stanford.edu/people/karpathy/deepvideo/quocfeat.gif'
     # linux
     if _platform == "linux" or _platform == "linux2":
-        videofile = '/home/%s/Downloads/trailer.ogv' % getpass.getuser()
-        GIFfile = '/home/%s/Downloads/Rotating_earth_(large).gif' % getpass.getuser()
+        videofile = '/home/%s/Downloads/Vizdoom_Curiosity.mp4' % getpass.getuser()
+        GIFfile = '/home/%s/Downloads/spatio-temporal features.gif' % getpass.getuser()
     # MAC OS X
     elif _platform == "darwin":
-        videofile = '/Users/%s/Downloads/trailer.ogv' % getpass.getuser()
-        GIFfile = '/Users/%s/Downloads/Rotating_earth_(large).gif' % getpass.getuser()
+        videofile = '/Users/%s/Downloads/Vizdoom_Curiosity.mp4' % getpass.getuser()
+        GIFfile = '/Users/%s/Downloads/spatio-temporal features.gif' % getpass.getuser()
 
     # download video
     urllib.request.urlretrieve(video_url, videofile)
