--- a/tutorial/visdom/4.videos.md
+++ b/tutorial/visdom/4.videos.md
@@ -99,7 +99,7 @@ except ImportError as packageError:
     print("The following required packages don't exist:")
     print(packageError)
 ```
-The sample video here, is a demonstration video using curiosity method introduced [here](https://github.com/pathak22/noreward-rl) and the GIF file, is taken as a spatio-temporal features example, from the supplemental material tsken from [this link](http://cs.stanford.edu/people/karpathy/deepvideo/index.html). 
+The sample video here, is a demonstration video using curiosity method introduced [here](https://github.com/pathak22/noreward-rl) and the GIF file is a spatio-temporal features example taken from the supplemental material provided in [this link](http://cs.stanford.edu/people/karpathy/deepvideo/index.html). 
 
 The following sources has being used to write some parts of the above tutorial:  
 alimony, gifduration, (2017), https://github.com/alimony/gifduration/blob/master/gifduration.py  
